Add profile picture update